# piscem-infer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mkdocs.yml
.claude/: CLAUDE-features.md  CLAUDE.md
.github/workflows/: release-please.yml
docs/: requirements.txt
docs/source/: conf.py  example_meta_info.json  formats.rst  index.rst  usage.rst
docs/source/_static/: simple_de_example.html
src/: fld.rs  main.rs  process_rad.rs  prog_opts.rs  utils.rs
src/utils/: custom_rad_utils.rs  em.rs  eq_maps.rs  gibbs.rs  io.rs  map_record_types.rs  parquet_utils.rs
