[package]
name = "piscem-infer"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-Attribution"
keywords = ["science", "RNA-seq", "RAD-file"]
categories = ["command-line-utilities", "science"]
repository = "https://github.com/COMBINE-lab/piscem-infer/"
homepage = "https://github.com/COMBINE-lab/piscem-infer/"
readme = "README.md"
description = "A flexible tool to perform target quantification from bulk-sequencing data"
authors = ["Rob Patro", "Rob Patro <rob@cs.umd.edu>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libradicl = { git = "https://github.com/COMBINE-lab/libradicl", version = "0.6.0" }
ahash = "0.8.3"
distrs = "0.2.1"
anyhow = "1.0.71"
bincode = "1.3.3"
bstr = "1.5.0"
clap = { version = "4.3.10", features = ["derive", "wrap_help", "cargo", "help", "usage", "error-context"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = true, features = ["env-filter"] }
tabled = "0.12.2"
rayon = "1.8.0"
rand_distr = "0.4.3"
rand = "0.8.5"
serde_json = "1.0.107"
serde_derive = "1.0.188"
serde = { version = "1.0.188", features = ["serde_derive", "derive"] }
arrow2 = { version = "0.18.0", features = ["io_parquet", "io_parquet_gzip", "io_parquet_zstd", "io_parquet_snappy"] }
scroll = "0.11.0"
snap = "1.1.0"
path-tools = "0.1.0"

[[bin]]
name = "piscem-infer"
path = "src/main.rs"

[profile.release]
debug-assertions = false
lto = "thin"
panic = "abort"
